--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -41,7 +41,16 @@
         android:layout_width="160dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:id="@+id/spinner"
+        android:id="@+id/task_spinner"
         android:layout_below="@+id/startButton"
         android:layout_centerHorizontal="true" />
+
+    <Spinner
+        android:layout_width="160dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:id="@+id/sub_task_spinner"
+        android:layout_below="@+id/task_spinner"
+        android:layout_alignLeft="@+id/task_spinner"
+        android:layout_alignStart="@+id/task_spinner" />
 </RelativeLayout>
