--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,17 +3,18 @@
 
     <group android:checkableBehavior="single">
         <item
+            android:id="@+id/current_task"
+            android:icon="@drawable/ic_menu_slideshow"
+            android:title="Current Task" />
+        <item
             android:id="@+id/add_task"
             android:icon="@drawable/ic_menu_camera"
             android:title="Add Task" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/remove_task"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:title="Remove Task" />
+
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
