--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -18,6 +18,12 @@
         android:background="#aaa"
         android:id="@+id/textView3" />
 
+    <com.radicaldroids.days.ChronTime
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="56sp"
+        android:id="@+id/chron_time"/>
+
     <Chronometer
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
